[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/objects/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/character.png" type="Texture" id=2]
[ext_resource path="res://assets/character_death.png" type="Texture" id=3]
[ext_resource path="res://scenes/objects/ColorAddSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/objects/coloradd.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/touch_left.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/touch_left_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/touch_right.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/touch_right_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/touch_jump.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/touch_jump_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/touch_menu.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/touch_menu_pressed.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/death.wav" type="AudioStream" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 1152, 64 )

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 23.5 )

[sub_resource type="AtlasTexture" id=5]
resource_local_to_scene = true
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 128, 256 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 128, 256 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 128, 320 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 256, 64 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = SubResource( 1 )

[node name="Death" type="Sprite" parent="."]
visible = false
texture = SubResource( 2 )
hframes = 12

[node name="Anim" type="AnimationPlayer" parent="Death"]
anims/death = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 8.5 )
shape = SubResource( 4 )

[node name="ColorAdd" parent="." instance=ExtResource( 4 )]
scale = Vector2( 2, 2 )
texture = SubResource( 5 )

[node name="TouchInput2" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ButtonLeft" type="TouchScreenButton" parent="TouchInput2"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, 512 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "left"
visibility_mode = 1

[node name="ButtonRight" type="TouchScreenButton" parent="TouchInput2"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 128, 512 )
scale = Vector2( 2, 2 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
passby_press = true
action = "right"
visibility_mode = 1

[node name="ButtonJump" type="TouchScreenButton" parent="TouchInput2"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 896, 512 )
scale = Vector2( 2, 2 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="ButtonMenu" type="TouchScreenButton" parent="TouchInput2"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
scale = Vector2( 2, 2 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
passby_press = true
action = "ui_menu"
visibility_mode = 1

[node name="TouchInput1" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ButtonLeft" type="TouchScreenButton" parent="TouchInput1"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 0, 576 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
passby_press = true
action = "left"
visibility_mode = 1

[node name="ButtonRight" type="TouchScreenButton" parent="TouchInput1"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 64, 576 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
passby_press = true
action = "right"
visibility_mode = 1

[node name="ButtonJump" type="TouchScreenButton" parent="TouchInput1"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 960, 576 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="ButtonMenu" type="TouchScreenButton" parent="TouchInput1"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
passby_press = true
action = "ui_menu"
visibility_mode = 1

[node name="TouchInput3" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ButtonLeft" type="TouchScreenButton" parent="TouchInput3"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 128, 384 )
shape = SubResource( 6 )
shape_centered = false
passby_press = true
action = "left"
visibility_mode = 1

[node name="ButtonRight" type="TouchScreenButton" parent="TouchInput3"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 384, 384 )
shape = SubResource( 7 )
passby_press = true
action = "right"
visibility_mode = 1

[node name="ButtonJump" type="TouchScreenButton" parent="TouchInput3"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 896, 320 )
shape = SubResource( 8 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="ButtonMenu" type="TouchScreenButton" parent="TouchInput3"]
pause_mode = 2
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 256, 64 )
shape = SubResource( 9 )
passby_press = true
action = "ui_menu"
visibility_mode = 1

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -3.0
bus = "SFX"
[connection signal="animation_finished" from="Death/Anim" to="." method="_on_Anim_animation_finished"]
